Fix: gap in content-section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,10 +17,6 @@ body {
   max-inline-size: 1440px;
 }
 
-.page {
-  margin: 0 auto;
-}
-
 h1,
 h2,
 h3,
