--- a/styles/style.css
+++ b/styles/style.css
@@ -98,11 +98,7 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 40px; */
+  margin: 0 auto;
 }
 
 .title {
@@ -114,7 +110,7 @@ main {
 
 .header {
   display: grid;
-  grid-template-rows: 1fr auto 1fr;
+  grid-template-rows: 1fr min-content 1fr;
   margin-block-end: 40px;
 }
 
@@ -281,6 +277,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* inline-size: 100%; */
 }
 
 .footer__title {
@@ -293,7 +290,7 @@ main {
   }
 
   /* .page {
-    gap:60px;
+    gap: 60px;
   } */
 
   .header {
@@ -314,7 +311,7 @@ main {
   }
 
   .content-section {
-    /* row-gap: 60px; */
+    row-gap: 80px;
     margin-block-end: 60px;
   }
 
